fixed overflow-x problem on right side

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /* START BELOW THIS LINE */
 
+html,
 body {
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
   overflow-x: hidden;
 }
 
@@ -10,16 +14,16 @@ body {
 }
 
 .navbar {
-  max-width: 100%;
+  width: 100%;
   background-color: rgb(58, 23, 0) !important;
   border-bottom: 3px rgb(51, 51, 51) solid;
+  overflow-x: hidden;
 }
 
 .navbar .nav-link {
   font-size: 14px;
   text-transform: uppercase;
   padding-left: 1rem !important;
-  padding-right: 1rem !important;
 }
 
 .navbar .nav-item.active {
